@@ -70,6 +70,7 @@ Bug fixes
  * Saving a page by pressing enter key no longer triggers a "Changes may not be saved message" (Sean Muck, Matt Westcott)
  * RoutablePageMixin no longer breaks in the presence of instance-only attributes such as those generated by FileFields (Fábio Macêdo Mendes)
  * The ``--schema-only`` flag on update_index no longer expects an argument (Karl Hobley)
+ * Added file handling to support custom user add/edit forms with images/files (Eraldo Energy)
 
 
 Upgrade considerations
