@@ -122,7 +122,7 @@ def index(request):
 @permission_required(add_user_perm)
 def create(request):
     if request.method == 'POST':
-        form = get_user_creation_form()(request.POST)
+        form = get_user_creation_form()(request.POST, request.FILES)
         if form.is_valid():
             user = form.save()
             messages.success(request, _("User '{0}' created.").format(user), buttons=[
@@ -145,7 +145,7 @@ def edit(request, user_id):
     can_delete = user_can_delete_user(request.user, user)
 
     if request.method == 'POST':
-        form = get_user_edit_form()(request.POST, instance=user)
+        form = get_user_edit_form()(request.POST, request.FILES, instance=user)
         if form.is_valid():
             user = form.save()
             messages.success(request, _("User '{0}' updated.").format(user), buttons=[
